# bond

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  third_party.txt
.github/workflows/: cmake.yml
cmake/: CPM.cmake
examples/: bob.l  quickstart.bd
examples/opengl/: example.bd  tri.frag
src/: CMakeLists.txt  api.cpp  api.h  ast.cpp  ast.h  bfmt.cpp  bfmt.h  bond.h  bond.rc  bond_gc.h  bootstrap.cpp  builtins.cpp  builtins.h  code.cpp  code.h  context.cpp  context.h  conv.hpp  debug.cpp  debug.h  engine.cpp  engine.h  gc.cpp  gc.h  globs.cpp  globs.h  import.cpp  import.h  lexer.cpp  lexer.h  main.cpp  md5.cpp  md5.h  nodevisitor.cpp  nodevisitor.h  object.cpp  object.h  object_helpers.h  parser.cpp  parser.h  (+9 more)
src/compiler/: ast.cpp  ast.h  bfmt.cpp  bfmt.h  codegen.cpp  codegen.h  context.cpp  context.h  lexer.cpp  lexer.h  nodevisitor.h  parser.cpp  parser.h  span.h
src/core/: build.cpp  build.h  conversions.cpp  conversions.h  core.cpp  core.h
src/core/bnk/: CMakeLists.txt  bnk.cpp  bnk.h  nuklear_glfw_gl3.h
src/core/bnk/glad/include/glad/: glad.h
src/docserver/: CMakeLists.txt  htmx.h  main.cpp
src/libs/: CMakeLists.txt  gc.cpp  io.cpp  isolate.cpp  os.bd  os.cpp
src/libs/bnk/: CMakeLists.txt  bnk.cpp  bnk.h
src/libs/bnk/glad/src/: glad.c
src/libs/fmt/: CMakeLists.txt  fmt.bd  fmt.cpp  fmt.h
src/libs/fs/: fs.cpp
src/libs/gc/: gc.cpp
src/libs/gl/: CMakeLists.txt
src/libs/gl/gl/: glmodule.cpp  glmodule.h
src/libs/gl/glad/: CMakeLists.txt
src/libs/gl/glad/include/KHR/: khrplatform.h
src/libs/gl/glad/include/glad/: glad.h
src/libs/gl/glad/src/: glad.c
src/libs/gl/imgui/: imconfig.h  imgui.bd  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_stdlib.cpp  imgui_stdlib.h  imgui_tables.cpp  imgui_widgets.cpp  imguimodule.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/libs/http/: http.cpp
src/libs/io/: io.bd  io.cpp  io.h
src/libs/isolate/: isolate.cpp
src/libs/os/: os.cpp
src/libs/raylib/: CMakeLists.txt  ray_impl.cpp  raylib.bd  raymodule.cpp  raymodule.h
src/libs/raylib/rayaudio/: rayaudio.cpp  rayaudio.h  rayaudio_impl.cpp
src/libs/raylib/raycore/: raycore.cpp  raycore.h
src/libs/raylib/rayshapes/: rayshapes.h  rayshapes_impl.cpp
src/libs/raylib/raytext/: raytext.cpp  raytext.h  raytext_impl.cpp
src/libs/raylib/raytexture/: raytexture.h  raytexture_impl.cpp
src/libs/reflection/: reflection.cpp
src/libs/socket/: socket.cpp
src/libs/sqlite/: CMakeLists.txt
src/libtool/: libtool.cpp
src/lsp/: CMakeLists.txt  json.hpp  jsonrpcpp.hpp  lsp.cpp  lsp.h  lsp.hpp  main.cpp  resolver.cpp  resolver.h  rpc.cpp  rpc.h  rpc.hpp  uri.hh
src/lsp/old/: lsp.cpp  lsp.h  message_buffer.cpp  message_buffer.hpp
src/objects/: bool.cpp  bytes.cpp  closure.cpp  code.cpp  float.cpp  function.cpp  future.cpp  hashmap.cpp  instance.cpp  integer.cpp  list.cpp  map.cpp  module.cpp  nativestruct.cpp  nil.cpp  result.cpp  string.cpp  struct.cpp
tests/: CMakeLists.txt  bond_test.cpp  test.h  testgc.cpp  testmap.cpp
tests/bond/: assert.bd  bool_tests.bd  float_tests.bd  integer_tests.bd  list_tests.bd  main.bd  map_tests.bd  result.bd  string_tests.bd  test.bd
tools/vscode-bond/: README.md  bond-0.0.1.vsix  extension.js  package.json
tools/vscode-bond/syntaxes/: bond.tmLanguage.json
